k8s/tubesync/resources/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
        - name: truenas-media
          persistentVolumeClaim:
            claimName: truenas-media
      containers:
        - name: tubesync
          image: ghcr.io/meeb/tubesync:v0.13.7
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
          volumeMounts:
            - name: volume
              mountPath: /config
            - name: truenas-media
              mountPath: /downloads
              subpath: YouTube
          ports:
            - name: http
              containerPort: 4848
