k8s/tubesync/resources/internal-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer

    gethomepage.dev/href: 'https://tubesync.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: tubesync
    gethomepage.dev/group: Other
    gethomepage.dev/icon: tubesync
    gethomepage.dev/name: Tubesync

spec:
  ingressClassName: internal
  rules:
    - host: &host tubesync.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: http
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
